--- a/docs/docs/usage/index.mdx
+++ b/docs/docs/usage/index.mdx
@@ -23,7 +23,7 @@ import {
   bodySchema,
   headersSchema,
   httpMethodSchema,
-} from "zod-request";
+} from "@nicnocquee/zod-request";
 
 export async function POST(request: Request) {
   const schema = requestSchema({
