--- a/docs/docs/usage/hostname.mdx
+++ b/docs/docs/usage/hostname.mdx
@@ -9,7 +9,7 @@ You can validate the hostname of a request using string schemas. The hostname is
 The simplest way is to use Zod's `z.literal()`:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -26,7 +26,7 @@ export async function GET(request: Request) {
 You can use any string schema to validate the hostname:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -43,7 +43,7 @@ export async function GET(request: Request) {
 You can use Zod's string validation methods to validate hostnames:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -61,7 +61,7 @@ export async function GET(request: Request) {
 You can use regex patterns to validate hostnames:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -87,7 +87,7 @@ import {
   headersSchema,
   httpMethodSchema,
   requestModeSchema,
-} from "zod-request";
+} from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function POST(request: Request) {
@@ -128,7 +128,7 @@ export async function POST(request: Request) {
 If the request hostname doesn't match the schema, a validation error will be thrown if you use `parse` or `parseAsync`.
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
@@ -153,7 +153,7 @@ export async function handler(request: Request) {
 </Callout>
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 // Request with "https://example.com:8080" will have hostname "example.com"
@@ -171,7 +171,7 @@ export async function handler(request: Request) {
 When building secure applications, you should validate hostnames to ensure requests are coming from expected domains:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function secureHandler(request: Request) {
@@ -188,7 +188,7 @@ export async function secureHandler(request: Request) {
 You can also use pattern matching to allow multiple subdomains:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
@@ -207,7 +207,7 @@ export async function handler(request: Request) {
 ### Validating API Endpoints
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function apiHandler(request: Request) {
@@ -223,7 +223,7 @@ export async function apiHandler(request: Request) {
 ### Allowing Multiple Environments
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
@@ -242,7 +242,7 @@ export async function handler(request: Request) {
 ### Validating Subdomains
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
