--- a/docs/docs/usage/pathname.mdx
+++ b/docs/docs/usage/pathname.mdx
@@ -9,7 +9,7 @@ You can validate the pathname of a request using string schemas. The pathname is
 The simplest way is to use Zod's `z.literal()`:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -26,7 +26,7 @@ export async function GET(request: Request) {
 You can use any string schema to validate the pathname:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -43,7 +43,7 @@ export async function GET(request: Request) {
 You can use Zod's string validation methods to validate pathnames:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -61,7 +61,7 @@ export async function GET(request: Request) {
 You can use regex patterns to validate pathnames:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function GET(request: Request) {
@@ -87,7 +87,7 @@ import {
   headersSchema,
   httpMethodSchema,
   requestModeSchema,
-} from "zod-request";
+} from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function POST(request: Request) {
@@ -128,7 +128,7 @@ export async function POST(request: Request) {
 If the request pathname doesn't match the schema, a validation error will be thrown:
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
@@ -153,7 +153,7 @@ export async function handler(request: Request) {
 </Callout>
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 // Request with "https://example.com/api/users?page=1" will have pathname "/api/users"
@@ -171,7 +171,7 @@ export async function handler(request: Request) {
 ### Validating API Endpoints
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function apiHandler(request: Request) {
@@ -187,7 +187,7 @@ export async function apiHandler(request: Request) {
 ### Allowing Multiple Routes
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
@@ -202,7 +202,7 @@ export async function handler(request: Request) {
 ### Validating Dynamic Routes
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
@@ -219,7 +219,7 @@ export async function handler(request: Request) {
 ### Validating Routes with Includes
 
 ```tsx
-import { requestSchema } from "zod-request";
+import { requestSchema } from "@nicnocquee/zod-request";
 import { z } from "zod";
 
 export async function handler(request: Request) {
