--- a/docs/docs/api/request-schema.mdx
+++ b/docs/docs/api/request-schema.mdx
@@ -58,7 +58,8 @@ A preprocessed Zod schema that validates the entire Request object. The validate
 - `searchParamsObject`: Validated search parameters (if `searchParams` provided)
 - `body`: The original request body stream (if `body` provided)
 - `bodyObject`: The validated body object for direct property access (if `body` provided)
-- `headers`: Validated headers (if `headers` provided)
+- `headers`: The original Headers object (if `headers` provided)
+- `headersObj`: Validated headers (if `headers` provided)
 - `method`: Validated HTTP method (if `method` provided)
 - `mode`: Validated Request mode (if `mode` provided)
 - `protocol`: Validated protocol (if `protocol` provided)
